# autopoc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  POCExplorer - 20260428#1.csv  README.md  docker-compose.test.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
.opencode/plans/: google-sheet-ingestion-plan.md  implementation-plan.md  k8s-deployment-plan.md  plan.md
deploy/: job.yaml  run-job.sh
deploy/base/: job.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
deploy/overlays/example/: kustomization.yaml  secret.yaml.example
docs/: architecture.md
quay-config/: config.yaml
scripts/: cleanup-project.sh  renew-quay-token.sh  setup-e2e.sh  setup-local-k8s.sh  teardown-e2e.sh  teardown-local-k8s.sh
src/autopoc/: __init__.py  cli.py  config.py  context.py  credentials.py  debug.py  graph.py  llm.py  logging_config.py  sheet.py  state.py
tests/: conftest.py  test_build.py  test_build_strategy.py  test_cli_logging.py  test_cli_run_sheet.py  test_config.py  test_containerize.py  test_containerize_extraction.py  test_file_tools.py  test_fork.py  test_fork_github.py  test_git_tools.py  test_github_tools.py  test_gitlab_tools.py  test_graph_partial.py  test_graph_poc.py  test_intake.py  test_poc_execute.py  test_poc_plan.py  test_poc_report.py  test_podman_tools.py  test_quay_tools.py  test_raw_output.py  test_retry_loop.py  test_script_tools.py  test_sheet.py  test_template_tools.py
tests/e2e/: conftest.py  test_e2e_build.py  test_e2e_deploy.py  test_e2e_full.py  test_e2e_intake_fork.py
(+44 files in other folders)
