[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopoc"
version = "0.1.0"
description = "LangGraph-based multi-agent system for automating PoC deployments on OpenShift AI"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-google-vertexai>=1.0",
    "langchain-core>=0.3",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
checkpoint = [
    "langgraph-checkpoint-sqlite>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[project.scripts]
autopoc = "autopoc.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/autopoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["tests/fixtures"]

[tool.ruff]
target-version = "py312"
line-length = 100
